@@ -353,6 +353,12 @@ BOOL _CeRegRestoreFile(LPCWSTR filename);
 
 BOOL _CeKillAllApps();
 
+DWORD _CeGetDiskFreeSpaceEx(
+		LPCTSTR _lpDirectoryName, 
+		PULARGE_INTEGER lpFreeBytesAvailable, 
+		PULARGE_INTEGER lpTotalNumberOfBytes, 
+		PULARGE_INTEGER lpTotalNumberOfFreeBytes);
+
 #endif /* SWIG */
 
 /*
